admin/manifests/world/db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
    app.kubernetes.io/component: db
    app.kubernetes.io/instance: db
  name: db
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 3306-tcp
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    deployment: db
  sessionAffinity: None
  type: ClusterIP
